Se modificaron los enlaces

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <a href="index.html" class="logo_titulo">CUBE FORCE</a>
             <ul>
                 <!-- <div class="linea"></div> -->
-                <li><a href="miembros.html"><div class="animenlace"></div>Miembros</a></li>
+                <li><a href="https://teamcubeforce.github.io/miembros/"><div class="animenlace"></div>Miembros</a></li>
                 <!-- <div class="linea"></div> -->
-                <li><a href="torneos.html"><div class="animenlace"></div>Torneos</a></li>
+                <li><a href="https://teamcubeforce.github.io/torneos/"><div class="animenlace"></div>Torneos</a></li>
                 <!-- <div class="linea"></div> -->
             </ul>
         </nav>
