Se modifico la parte dos del historial

--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
         <nav>
             <a href="index.html" class="logo_titulo">CUBE FORCE</a>
             <ul>
-                <!-- <div class="linea"></div> -->
                 <li><a href="https://teamcubeforce.github.io/miembros/"><div class="animenlace"></div>Miembros</a></li>
-                <!-- <div class="linea"></div> -->
                 <li><a href="https://teamcubeforce.github.io/torneos/"><div class="animenlace"></div>Torneos</a></li>
-                <!-- <div class="linea"></div> -->
             </ul>
         </nav>
     </header>
@@ -122,11 +119,11 @@
                                 <h3>Campeón en 3x3 y Pyraminx - School Winter Lima 2022</h3>
                             </div>
                             <div class="contenido_historia">
-                                <p>El primer torneo en el se obtuvo el primer lugar en la categoria principal, Robert Yomi Cadenas demostro tener un gran potencial en su segundo torneo oficial con un average sub 8 (7.92 segundos) consiguiendo el primer lugar en la categoria 3x3x3.</p>
-                                <p>Tambien se gano el primer lugar en la categoria de Pyraminx gracias a Jeyson Espinoza con un average sub 4 (3.61 segundos)</p>
-                                <p>Se ganaron otros podios como el segundo lugar en la categoria 6x6x6 por Kevin Huaman con un average de (2:08.93 minutos), Alexander Montoya quedo en segundo lugar de megaminx, tambien Giordano Aguilar (Lider reclutador) obtuvo su primer podio en torneo oficial, en la categoria de Clock con un average de (11.58 segundos).</p>
-                                <p>Luego de este torneo se unio un nuevo integrante Rodrigo Sasieta que habia quedado en el primer lugar en la categoria de Skewb.</p>
-                                <p>Gracias Fernando Chang por haber estado en Cube Force.</p>
+                                <p>El primer torneo en el que se obtuvo el primer lugar en la categoría principal, Robert Yomi Cadenas demostró tener un gran potencial en su segundo torneo oficial con un average sub 8 (7.92 segundos), consiguiendo el primer lugar en la categoría de 3x3.</p>
+                                <p>Tambien se gano el primer lugar en la categoria de Pyraminx, gracias a Jeyson Espinoza, con un average sub 4 (3.61 segundos).</p>
+                                <p>También se ganaron otros podios, como el segundo lugar en la categoría de 6x6, por Kevin Huamán, con un average de (2:08.93 minutos), Alexander Montoya quedó en segundo lugar de Megaminx, también Giordano Aguilar (líder reclutador) obtuvo su primer podio en torneo oficial, en la categoría de Clock, con un average sub 12 (11.58 segundos).</p>
+                                <p>Luego de este torneo se unió un nuevo integrante, Rodrigo Sasieta, que había quedado en el primer lugar en la categoría de Skewb.</p>
+                                <p>Gracias Fernando Chang, por haber estado en Cube Force.</p>
                                 <br>Representantes<br>
                                 <ul>
                                     <li>Luis Gómez Taya <span class="ind_admin">(Administrador)</span></li>
