Se modifico la parte tres del historial

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
                                 <h3>Campeón en 6x6 y NR en Pyraminx- Real Cube 2022</h3>
                             </div>
                             <div class="contenido_historia">
-                                <p>Nuestro mejor representante en Big Cubes Kevin Huaman obtuvo el primer lugar en la categoria de 6x6, con un average de (2:01.48  minutos).</p>
-                                <p>Tambien se gano el primer lugar en la categoria de Pyraminx gracias a Jeyson Espinoza con un average sub 3 (2.65 segundos) en el cual se obtuve el primer NR en Cube Force con un single de 1.66 segundos.</p>
-                                <p>En Megaminx se obtuvo el segundo lugar por Alexander Montoya con un average sub 49 (48.62 segundos), y el tercer lugar por Joaquin Osorio con un average sub 51 (50.68 segundos)</p>
-                                <p>Al final de este torneo se unio un nuevo integrante Julio Noliz que habia quedado en el tercer lugar en la categoria de 2x2.</p>
-                                <p>Gracias David Osorio y Jeyson Espinoza por haber estado en Cube Force.</p>
+                                <p>Nuestro mejor representante en Big Cubes, Kevin Huamán, obtuvo el primer lugar en la categoría de 6x6, con un average cerca del sub 2 (2:01.48 minutos).</p>
+                                <p>También se ganó el primer lugar en la categoria de Pyraminx gracias a Jeyson Espinoza, con un average sub 3 (2.65 segundos) en el cual también se obtuvo el primer NR en Cube Force, con un single de 1.66 segundos.</p>
+                                <p>En Megaminx se obtuvo el segundo lugar, por Alexander Montoya, con un average sub 49 (48.62 segundos) y el tercer lugar por Joaquin Osorio con un average sub 51 (50.68 segundos).</p>
+                                <p>Al final de este torneo se unió un nuevo integrante, Julio Noliz, que había quedado en el tercer lugar en la categoría de 2x2.</p>
+                                <p>Gracias David Osorio, Favio Suárez y Jeyson Espinoza por haber estado en Cube Force.</p>
                                 <br>Representantes<br>
                                 <ul>
                                     <li>Luis Gómez Taya <span class="ind_admin">(Administrador)</span></li>
