Se añadio algunas comas

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 <p>Tambien se gano el primer lugar en la categoria de Pyraminx, gracias a Jeyson Espinoza, con un average sub 4 (3.61 segundos).</p>
                                 <p>También se ganaron otros podios, como el segundo lugar en la categoría de 6x6, por Kevin Huamán, con un average de (2:08.93 minutos), Alexander Montoya quedó en segundo lugar de Megaminx, también Giordano Aguilar (líder reclutador) obtuvo su primer podio en torneo oficial, en la categoría de Clock, con un average sub 12 (11.58 segundos).</p>
                                 <p>Luego de este torneo se unió un nuevo integrante, Rodrigo Sasieta, que había quedado en el primer lugar en la categoría de Skewb.</p>
-                                <p>Gracias Fernando Chang, por haber estado en Cube Force.</p>
+                                <p>Gracias, Fernando Chang, por haber estado en Cube Force.</p>
                                 <br>Representantes<br>
                                 <ul>
                                     <li>Luis Gómez Taya <span class="ind_admin">(Administrador)</span></li>
@@ -155,7 +155,7 @@
                                 <p>También se ganó el primer lugar en la categoria de Pyraminx gracias a Jeyson Espinoza, con un average sub 3 (2.65 segundos) en el cual también se obtuvo el primer NR en Cube Force, con un single de 1.66 segundos.</p>
                                 <p>En Megaminx se obtuvo el segundo lugar, por Alexander Montoya, con un average sub 49 (48.62 segundos) y el tercer lugar por Joaquin Osorio con un average sub 51 (50.68 segundos).</p>
                                 <p>Al final de este torneo se unió un nuevo integrante, Julio Noliz, que había quedado en el tercer lugar en la categoría de 2x2.</p>
-                                <p>Gracias David Osorio, Favio Suárez y Jeyson Espinoza por haber estado en Cube Force.</p>
+                                <p>Gracias, David Osorio y Jeyson Espinoza por haber estado en Cube Force.</p>
                                 <br>Representantes<br>
                                 <ul>
                                     <li>Luis Gómez Taya <span class="ind_admin">(Administrador)</span></li>
@@ -185,7 +185,7 @@
                                 <p>El mejor evento de todo el año el Peru Nationals, esta vez fuera de Lima, en Arequipa por lo cual no todos del equipo pudieron hacerse presente, Nuestro representante en 3x3 y 2x2 Robert Yomi Cadenas obtuvo un promedio sub 9 en todas las rondas de 3x3 y un promedio sub 3 en la final de 2x2. El representante en megaminx Joaquin Osorio con un promedio sub 59.</p>
                                 <p>A pesar del buen desempeseño, en este torneo no se pudo alcanzar algun podio.</p>
                                 <p>Durante este torneo en Lima se estaba reclutando nuevos miembros, Ingrit Mayta que tiene un gran potencial en distintas categorias y Elias ALonso Usaqui Cabezas que anteriormente ya habia obtenido podios en las categorias de Megaminx y Square-1.</p>
-                                <p>Gracias Tyffany Villanueva y Favio Suárez por haber estado en Cube Force.</p>
+                                <p>Gracias, Tyffany Villanueva y Favio Suárez por haber estado en Cube Force.</p>
                                 <br>Representantes<br>
                                 <ul>
                                     <li>Robert Yomi Cadenas Nuñez</li>
