Se modificaron las partes 4 y 5 del historial

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                                 <h3>Peru Nationals 2022</h3>
                             </div>
                             <div class="contenido_historia">
-                                <p>El mejor evento de todo el año el Peru Nationals, esta vez fuera de Lima, en Arequipa por lo cual no todos del equipo pudieron hacerse presente, Nuestro representante en 3x3 y 2x2 Robert Yomi Cadenas obtuvo un promedio sub 9 en todas las rondas de 3x3 y un promedio sub 3 en la final de 2x2. El representante en megaminx Joaquin Osorio con un promedio sub 59.</p>
-                                <p>A pesar del buen desempeseño, en este torneo no se pudo alcanzar algun podio.</p>
-                                <p>Durante este torneo en Lima se estaba reclutando nuevos miembros, Ingrit Mayta que tiene un gran potencial en distintas categorias y Elias ALonso Usaqui Cabezas que anteriormente ya habia obtenido podios en las categorias de Megaminx y Square-1.</p>
+                                <p>El mejor evento de todo el año, el Peru Nationals, esta vez en la ciudad de Arequipa en lugar de Lima, por lo cual no todo el equipo pudo hacerse presente, Nuestro representante en 3x3 y 2x2 Robert Yomi Cadenas obtuvo un promedio sub 9 en todas las rondas de 3x3 y un promedio sub 3 en la final de 2x2. El representante en Megaminx, Joaquín Osorio, obtuvo un promedio sub 59.</p>
+                                <p>A pesar del buen desempeño, en este torneo no se pudo alcanzar podios.</p>
+                                <p>Durante este torneo, en Lima se estaban reclutando nuevos miembros, Ingrit Mayta, que tiene un gran potencial en distintas categorias y Elías Usaqui, que anteriormente había obtenido podios en las categorias de Megaminx y Square-1, ambos eran cercanos al Team antes de ser miembros.</p>
                                 <p>Gracias, Tyffany Villanueva y Favio Suárez por haber estado en Cube Force.</p>
                                 <br>Representantes<br>
                                 <ul>
@@ -203,14 +203,14 @@
                                 <h3>Mejor Torneo CubeForce 2022 - TCG Power Up 2022</h3>
                             </div>
                             <div class="contenido_historia">
-                                <p>El ultimo torneo del año 2022, se obtuvieron los mejores resultados con un total de 7 podios.</p>
-                                <p>Robert Yomi Cadenas quedo primer lugar en la categoria de 3x3 con un average sub 9 (8.19 segundos).</p>
-                                <p>Nuestro representante en Big Cubes Kevin Huaman obtuvo el tercer Lugar en la categoria de 6x6 con un average de 2:06.10 minutos, y tambien el segundo lugar en 7x7 con un average de 3:08.94 minutos.</p>
-                                <p>Jose Fuenmayor quedo tercer lugar en la categoria de 3x3 a una mano con un average sub 14 (13.73 segundos) obteniendo el NR de average de Venezuela.</p>
-                                <p>En la Categoria de Megaminx en segundo lugar Alexander Montoya con un average sub 44 (43.44 segundos) y en tercer lugar Elias Usaqui con (47.93 segundos).</p>
-                                <p>Por primera vez en otra categoria Alexander Montoya obtiene el segundo lugar en la categoria de Pyraminx con un average su 5 (4.63 segundos).</p>
-                                <p>Al final de este torneo se unio un nuevo integrante David Quispe que habia quedado en el tercer lugar en la categoria de 3x3 y el segundo lugar de 3x3 a una mano.</p>
-                                <p>Gracias Alexander Montoya y Joaquin Osorio por haber estado en Cube Force.</p>
+                                <p>El último torneo del año 2022, se obtuvieron los mejores resultados, con un total de 7 podios.</p>
+                                <p>Robert Yomi Cadenas quedó en primer lugar en la categoria de 3x3, con un average sub 9 (8.19 segundos).</p>
+                                <p>Nuestro representante en Big Cubes, Kevin Huamán, obtuvo el tercer Lugar en la categoria de 6x6, con un average de 2:06.10 minutos y también obtuvo el segundo lugar en 7x7, con un average de 3:08.94 minutos.</p>
+                                <p>Jose Fuenmayor quedó en tercer lugar en la categoria de 3x3 a una mano, con un average sub 14 (13.73 segundos), obteniendo el NR de average de Venezuela.</p>
+                                <p>En la categoria de Megaminx en segundo lugar, Alexander Montoya con un average sub 44 (43.44 segundos) y en tercer lugar Elías Usaqui, con 47.93 segundos.</p>
+                                <p>Por primera vez, en otra categoria, Alexander Montoya obtiene el segundo lugar en la categoria de Pyraminx, con un average sub 5 (4.63 segundos).</p>
+                                <p>Al final de este torneo se unió un nuevo integrante, David Quispe, que había quedado en tercer lugar en la categoría de 3x3 y en segundo lugar en 3x3 a una mano.</p>
+                                <p>Gracias, Alexander Montoya y Joaquín Osorio, por haber estado en Cube Force.</p>
                                 <br>Representantes<br>
                                 <ul>
                                     <li>Luis Gómez Taya <span class="ind_admin">(Administrador)</span></li>
