Se agregaron metas al head para ayudar al posicionamiento en la red

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+    <meta itemprop="name" content="team cube force" />
+    <meta itemprop="description" content="Somos un Team de speedcubers, queremos promover el Speedcubing como deporte, competir por los primeros puestos en los torneos y romper récords. También estamos para pasarla bien y divertirnos cubeando." />
+    <meta itemprop="image" content="https://teamcubeforce.github.io/img/icons/icono_cubeforce.jpeg" />
 </head>
 <body>
     <div class="presentacion_fondo">
