Se agrego el saludo de los fundadores y se hicierron correciones en los saludos del text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                     </div>
                 </div>
                 <div class="text">
-                    <p class="class_left_right">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae dolor accusamus, eius libero tempore odio neque, deleniti voluptas veniam, nemo consectetur quis quisquam aperiam molestiae omnis? Quos tenetur facilis sapiente eum maxime, laboriosam quae tempore? Eum labore iusto quaerat expedita deleniti repellendus, ducimus quam impedit tenetur eos ut nihil laudantium culpa optio suscipit delectus minus ab nesciunt, accusantium fugiat accusamus! Distinctio porro laborum quae sed ab sit reprehenderit fugit numquam accusamus delectus! Assumenda laudantium.</p>
+                    <p class="class_left_right">¡Hola! Este es un mensaje de los fundadores de Cube Force, estamos contentos de que visiten nuestra página y que quieran saber más de nuestro Team. Estamos orgullosos del equipo que hemos creado y de la amistad que hemos formado entre todos nuestros miembros. 
+                    Además de esta página, tenemos muchos proyectos a futuro para el Team, también metas importantes en cuanto a la competencia, como obtener podios en todas las categorías oficiales, romper récords nacionales, continentales y, si es posible, algo más; también queremos aspirar a logros aún más grandes al cumplir las metas que tenemos por el momento. 
+                    Nuestro propósito es destacar a nivel nacional y luego internacional, dejar una huella en el speedcubing peruano y latinoamericano en general. Les damos la bienvenida a nuestra página web y esperemos que les guste.</p>
                     <p class="class_left_right">Giordano Aguilar y Luis Gomez</p>
                 </div>
             </div>
