--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     <div class="otracaja"></div>
                 </div>
                 <div class="caja class_right_left">
-                    <a href="miembros.html">Miembros</a>
+                    <a href="https://teamcubeforce.com/miembros/">Miembros</a>
                     <div class="imagen">
                         <img src="img/img_basicas/cont_miembros.png" alt="#" width="200" height="150">
                     </div>
@@ -314,7 +314,7 @@
                     <div class="otracaja"></div>
                 </div>
                 <div class="caja class_left_right">
-                    <a href="miembros.html#CF2021TAYA01">Desafio</a>
+                    <a href="https://teamcubeforce.com/miembros/#CF2021TAYA01">Desafio</a>
                     <div class="imagen">
                         <img src="img/img_basicas/cont_versus.png" alt="#" width="150" height="150">
                     </div>
@@ -322,7 +322,7 @@
                     <div class="otracaja"></div>
                 </div>
                 <div class="caja class_right_left">
-                    <a href="torneos.html">Torneos</a>
+                    <a href="https://teamcubeforce.com/torneos/">Torneos</a>
                     <div class="imagen">
                         <img src="img/img_basicas/cont_torneos.png" alt="#" width="200" height="200">
                     </div>
