--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <header>
         <nav>
-            <a href="index.html" class="logo_titulo">CUBE FORCE</a>
+            <a href="https://teamcubeforce.github.io/" class="logo_titulo">CUBE FORCE</a>
             <ul>
                 <li><a href="https://teamcubeforce.github.io/miembros/"><div class="animenlace"></div>Miembros</a></li>
                 <li><a href="https://teamcubeforce.github.io/torneos/"><div class="animenlace"></div>Torneos</a></li>
