Se agregaron enlaces www

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </div>
     <header>
         <nav>
-            <a href="https://teamcubeforce.github.io/" class="logo_titulo">CUBE FORCE</a>
+            <a href="https://www.teamcubeforce.github.io/" class="logo_titulo">CUBE FORCE</a>
             <ul>
-                <li><a href="https://teamcubeforce.github.io/miembros/"><div class="animenlace"></div>Miembros</a></li>
-                <li><a href="https://teamcubeforce.github.io/torneos/"><div class="animenlace"></div>Torneos</a></li>
+                <li><a href="https://www.teamcubeforce.github.io/miembros/"><div class="animenlace"></div>Miembros</a></li>
+                <li><a href="https://www.teamcubeforce.github.io/torneos/"><div class="animenlace"></div>Torneos</a></li>
             </ul>
         </nav>
     </header>
@@ -306,7 +306,7 @@
                     <div class="otracaja"></div>
                 </div>
                 <div class="caja class_right_left">
-                    <a href="https://teamcubeforce.com/miembros/">Miembros</a>
+                    <a href="https://www.teamcubeforce.com/miembros/">Miembros</a>
                     <div class="imagen">
                         <img src="img/img_basicas/cont_miembros.png" alt="#" width="200" height="150">
                     </div>
@@ -314,7 +314,7 @@
                     <div class="otracaja"></div>
                 </div>
                 <div class="caja class_left_right">
-                    <a href="https://teamcubeforce.com/miembros/#CF2021TAYA01">Desafio</a>
+                    <a href="https://www.teamcubeforce.com/miembros/#CF2021TAYA01">Desafio</a>
                     <div class="imagen">
                         <img src="img/img_basicas/cont_versus.png" alt="#" width="150" height="150">
                     </div>
@@ -322,7 +322,7 @@
                     <div class="otracaja"></div>
                 </div>
                 <div class="caja class_right_left">
-                    <a href="https://teamcubeforce.com/torneos/">Torneos</a>
+                    <a href="https://www.teamcubeforce.com/torneos/">Torneos</a>
                     <div class="imagen">
                         <img src="img/img_basicas/cont_torneos.png" alt="#" width="200" height="200">
                     </div>
