Se redireccionaron todos los enlaces CF_part1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
     <meta itemprop="name" content="team cube force" />
     <meta itemprop="description" content="Somos un Team de speedcubers, queremos promover el Speedcubing como deporte, competir por los primeros puestos en los torneos y romper récords. También estamos para pasarla bien y divertirnos cubeando." />
-    <meta itemprop="image" content="https://teamcubeforce.github.io/img/icons/icono_cubeforce.jpeg" />
+    <meta itemprop="image" content="https://www.teamcubeforce.com/img/icons/icono_cubeforce.jpeg" />
 </head>
 <body>
     <div class="presentacion_fondo">
@@ -22,10 +22,10 @@
     </div>
     <header>
         <nav>
-            <a href="https://www.teamcubeforce.github.io/" class="logo_titulo">CUBE FORCE</a>
+            <a href="https://www.teamcubeforce.com/" class="logo_titulo">CUBE FORCE</a>
             <ul>
-                <li><a href="https://www.teamcubeforce.github.io/miembros/"><div class="animenlace"></div>Miembros</a></li>
-                <li><a href="https://www.teamcubeforce.github.io/torneos/"><div class="animenlace"></div>Torneos</a></li>
+                <li><a href="https://www.teamcubeforce.com/miembros/"><div class="animenlace"></div>Miembros</a></li>
+                <li><a href="https://www.teamcubeforce.com/torneos/"><div class="animenlace"></div>Torneos</a></li>
             </ul>
         </nav>
     </header>
