Se añadieron metas property

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Cube Force</title>
+    <meta property="og:description" content="Somos un Team de speedcubers, queremos promover el Speedcubing como deporte, competir por los primeros puestos en los torneos y romper récords. También estamos para pasarla bien y divertirnos cubeando."/>
+    <meta property="og:image" content="img/icons/icono_cubeforce.jpeg"/>
+    <meta property="og:site_name" content="Team Cube Force"/>
+    <meta property="og:title" content="Team Cube Force"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.teamcubeforce.com"/>
     <link rel="shortcut icon" href="img/icons/icono_cubeforce.jpeg" type="image/jpeg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,8 +18,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
     <meta itemprop="name" content="team cube force" />
-    <meta itemprop="description" content="Somos un Team de speedcubers, queremos promover el Speedcubing como deporte, competir por los primeros puestos en los torneos y romper récords. También estamos para pasarla bien y divertirnos cubeando." />
-    <meta itemprop="image" content="https://www.teamcubeforce.com/img/icons/icono_cubeforce.jpeg" />
 </head>
 <body>
     <div class="presentacion_fondo">
