--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Alexander Montoya">
+    <meta name="description" content="Somos un Team de speedcubers, queremos promover el Speedcubing como deporte, competir por los primeros puestos en los torneos y romper récords. También estamos para pasarla bien y divertirnos cubeando.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Cube Force</title>
