--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="google-site-verification" content="7EsJ3r6ggaXojlgUDeldYpfzJOxVbco56nwGU6zAhoo" />
     <meta charset="UTF-8">
     <meta name="author" content="Alexander Montoya">
     <meta name="description" content="Somos un Team de speedcubers, queremos promover el Speedcubing como deporte, competir por los primeros puestos en los torneos y romper récords. También estamos para pasarla bien y divertirnos cubeando.">
