Se colocaron los enlaces a las paginas principales

--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
         <div class="redessociales">
             <nav>
                 <ul>
-                    <li><a href="#"><img src="img/icons/facebook.png" width="50"></a></li>
-                    <li><a href="#"><img src="img/icons/instagram.png" width="50"></a></li>
-                    <li><a href="#"><img src="img/icons/youtube.png" width="50"></a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=100090246973545"><img src="img/icons/facebook.png" width="50"></a></li>
+                    <li><a href="https://www.instagram.com/team_cubeforce/"><img src="img/icons/instagram.png" width="50"></a></li>
+                    <li><a href="https://www.youtube.com/@luiscuber."><img src="img/icons/youtube.png" width="50"></a></li>
                 </ul>
             </nav>
         </div>
